dist/1.0/bin/sample/retrieveUnpackaged/objects/Migration_Order__c.object
<CustomObject>
    <fields>
        <fullName>CTarget_Bundle__c</fullName>
        <description>Target Bundle</description>
        <inlineHelpText>Target Bundle</inlineHelpText>
        <label>Target Bundle</label>
        <referenceTo>CProduct__c</referenceTo>
        <relationshipLabel>Migration Orders</relationshipLabel>
        <relationshipName>Migration_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments</description>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Downloaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies, whether the origin service full configuration has been already downloaded. Technical flag used for asynchronous migration order processing.</description>
        <inlineHelpText>Specifies, whether the origin service full configuration has been allready downloaded.</inlineHelpText>
        <label>Downloaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_date__c</fullName>
        <description>Effective date</description>
        <inlineHelpText>Effective date</inlineHelpText>
        <label>Effective date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Order__c</fullName>
        <description>Installation Order</description>
        <inlineHelpText>Installation Order</inlineHelpText>
        <label>Installation Order</label>
        <referenceTo>COrder__c</referenceTo>
        <relationshipLabel>Migration Orders (Installation Order)</relationshipLabel>
        <relationshipName>Migration_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <description>CARE_SK_370 Automatic Retention Case</description>
        <inlineHelpText>Partner which has agreed with Customer migrating the service.</inlineHelpText>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Migration Orders</relationshipLabel>
        <relationshipName>Migration_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provisioning_start_date__c</fullName>
        <description>Provisioning start date</description>
        <inlineHelpText>Provisioning start date</inlineHelpText>
        <label>Provisioning start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Soft_Disconnection_Order__c</fullName>
        <description>Soft Disconnection Order</description>
        <inlineHelpText>Soft Disconnection Order</inlineHelpText>
        <label>Soft Disconnection Order</label>
        <referenceTo>COrder__c</referenceTo>
        <relationshipLabel>Migration Orders</relationshipLabel>
        <relationshipName>Migration_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Service_Bundle__c</fullName>
        <description>Source Service Bundle</description>
        <inlineHelpText>Source Service Bundle</inlineHelpText>
        <label>Source Service Bundle</label>
        <referenceTo>ServiceBundle__c</referenceTo>
        <relationshipLabel>Migration Orders</relationshipLabel>
        <relationshipName>Migration_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Migration Order Status</description>
        <inlineHelpText>Migration Order Status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting provisioning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Billing_Account__c</fullName>
        <description>Target Billing Account</description>
        <inlineHelpText>Target Billing Account</inlineHelpText>
        <label>Target Billing Account</label>
        <referenceTo>Billing_Accounts__c</referenceTo>
        <relationshipLabel>Migration Orders</relationshipLabel>
        <relationshipName>Migration_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Bundle__c</fullName>
        <description>Target Product (not used)</description>
        <inlineHelpText>Target Product (not used)</inlineHelpText>
        <label>Target Bundle</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Migration Orders</relationshipLabel>
        <relationshipName>Migration_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Migration Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Soft_Disconnection_Order__c</columns>
        <columns>Installation_Order__c</columns>
        <columns>Provisioning_start_date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MOR{000000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>